@@ -6,6 +6,8 @@
   should use the new "ezcPersistentNativeGenerator" from now, with
   auto_increment. "ezcPersistentSequenceGenerator" dispatches to this for BC
   reasons.
+- Fixed issue #9335: PersistensSession should use object->getState() in all
+  methods rather than accessing objects properties directly.
 
 
 1.2beta1 - Tuesday 24 October 2006
